...
                                <segments>
                                    <segment title="Future"/>
                                    <segment title="Past"/>
                                </segments>
                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                    </view>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="Event" id="wem-26-tEe">
                        <barButtonItem key="leftBarButtonItem" title="Delete All" id="pPY-2Z-zti">
                            <connections>
                                <action selector="deleteAllPressed" destination="BYZ-38-t0r" id="AWC-KO-ZML"/>
...
                                                <rect key="frame" x="311" y="7" width="83" height="30"/>
                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                <state key="normal" title="Save"/>
                                            </button>
                                        </barButtonItem>
...
                                </constraints>
                            </mapView>
                            <searchBar contentMode="redraw" placeholder="Address" translatesAutoresizingMaskIntoConstraints="NO" id="kVV-Xi-chb">
                                <rect key="frame" x="0.0" y="298" width="414" height="56"/>
                                <constraints>
...
                                <textInputTraits key="textInputTraits"/>
                            </searchBar>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wL9-ud-rmW">
                                <rect key="frame" x="0.0" y="74" width="414" height="35.666666666666657"/>
                                <constraints>
...
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="DateTime" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dpF-DM-2Lj">
                                <rect key="frame" x="0.0" y="118.66666666666667" width="414" height="35.333333333333329"/>
                                <constraints>
...
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Describe" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="o1D-Th-OFm">
                                <rect key="frame" x="0.0" y="163" width="414" height="35"/>
                                <constraints>
...
                    </view>
                    <navigationItem key="navigationItem" title="Add Event" id="6xv-7e-sq9">
                        <barButtonItem key="rightBarButtonItem" title="Add" id="bdX-Zt-SEa">
                            <connections>
                                <action selector="addpressed:" destination="fir-sk-IAT" id="8zR-HW-Zz5"/>
...
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Jdw-6Y-mTq" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Home" image="event-1" id="tP0-Bg-O8U" userLabel="Event"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Vwe-7l-x6m">
...
