...
    
    var timer: Timer!
    
    override func viewDidLoad() {
        super.viewDidLoad()
        self.title = "Event"
        self.navigationItem.rightBarButtonItem = UIBarButtonItem(title: "Edit", style: .plain, target:self, action:#selector(editPressed))
        
        self.dayLabel.text = "00"
        self.hoursLabel.text = "00"
        self.minutesLabel.text = "00"
        updateEvent(event: self.event)
    }
...
